--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@
 # install Python ourselves using conda.
 language: c
 
-os:
-    - linux
+os: linux
 
 # Setting sudo to false opts in to Travis-CI container-based builds.
 sudo: false
@@ -84,8 +83,9 @@ matrix:
         - os: linux
           stage: Test docs, astropy dev, and without optional dependencies
           env: SETUP_CMD='build_docs -w'
-          apt:
-             packages:
+          addons:
+            apt:
+              packages:
                 - graphviz
                 - texlive-latex-extra
                 - dvipng
